argocd/kustomize/empty-web/example-local/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: empty-web
  labels:
    app: empty-web
    istio: ingressgateway
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: empty-web
      port: 3000
